# django_localize

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
django_localize/: apps.py
django_localize/management/commands/: generate_localizations.py
django_localizer/: __init__.py  apps.py  settings.py  translate.py
django_localizer/management/commands/: generate_localizations.py
django_localizer/templatetags/: translate.py
docs/: conf.py  index.rst  installation.rst  usage.rst
tests/: settings.py  strings.txt  test_models.py  test_one.py  urls.py
