[tool.poetry]
name = "django_localizer"
version = "0.1.10"
description = "A library for making localizing django apps easier"
authors = ["Timofey Danshin <t.danshin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = ">1.10, <4.0"
stew = "^0.1.2"

[tool.poetry.dev-dependencies]
tox = "^3.14.2"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
